@@ -1,3 +1,4 @@
+<<<<<<< HEAD
 * 2014-06-13 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 33134: Don't auto-insert system-folder permission for possible non-visible parent folders when moving to trash  
@@ -47,6 +48,7 @@
  - Fix for bug 32642: Ensure no database boundaries are exceeded when converting a XING user to a contact entry
  - Fix for bug 32974: Cancel running IMAP-IDLE listener in case context has been deleted in the meantime +
                       Improved handling in ReplicationMonitor class to avoid default retry mechanism in case a "DBP-0021" (Transaction counter is missing) occurs
+ - Fix for bug 32942: Support separate namespaces for different IMAP users (do not globally cache root subfolder capability per IMAP server anymore)
 
 * 2014-06-04 - tobias.friedrich@open-xchange.com
 
